--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   font-family: "fantasy", Verdana, sans-serif;
-  background-image: url("https://raw.githubusercontent.com/angy-Rin/TRIVIA-PRE-TRIVIA/main/WhatsApp%20Image%202023-02-21%20at%209.07.13%20AM.jpg");
+  background-image: url("src/nevado.jpg");
   background-repeat: no-repeat;
   background-size: 1400px 700px;
 }
