--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   font-family: "fantasy", Verdana, sans-serif;
-  background-image: url("https://raw.githubusercontent.com/angy-Rin/TRIVIA-Equipo3.1/main/image/nevado.jpg");
+  background-image: url("https://github.com/angy-Rin/TRIVIA-Equipo3.1/blob/4c9482c9b2f43fdcd97b76948e41f3fa1de676e5/image/nevado.jpg");
   background-repeat: no-repeat;
   background-size: 1400px 700px;
 }
